package controller;

public enum ScreenState {
    WELCOME,
    INVENTORY,
    RECIPEBOOK,
    RECIPE,
    EXIT,
    INVALID
}
