@startuml
hide circle
hide empty members
skinparam classAttributeIconSize 0

class Ui {
    +Ui()
    +Ui(inStream : InputStream)
    +showInitMessage()
    +showDivider()
    +getUserCommand() : String
    +showResultToUser(result : CommandResult)
    +<u>showScreenPrompt(screen : ScreenState)
    +<u>showWelcomeMessage()
    +<u>showInventoryMessage()
    +<u>showRecipeMessage()
    +<u>showRecipeBookMessage()
    +<u>showWelcomeCommands()
    +<u>showInventoryCommands()
    +<u>showRecipeCommands()
    +<u>showRecipeBookCommands()
    +showGoodbyeMessage()
}

package controller {
    class KitchenCTRL {
        - <u>Inventory inventory
        - <u>RecipeBook recipeBook
        - <u>Recipe activeRecipe
        - Parser parser

        + <u>getCurrentScreen() : ScreenState
        + <u>setCurrentScreen(ScreenState) : void
        + <u>setActiveRecipe(Recipe) : void
        + <u>getActiveRecipe() : Recipe
        + <u>requireActiveRecipe() : Recipe
        + <u>main(args : String[]) : void
        + run() : void
        + initializeCatalogues() : void
        - start() : void
        - runCommandLoopUntilExitCommand() : void
        - exit() : void
        + getCatalogueByScreen(ScreenState) : Catalogue<?>
        + <u>getRecipeBook() : RecipeBook
        + <u>getInventory() : Inventory
        + <u>getAllCatalogues() : ArrayList<Catalogue<?>>
    }

enum ScreenState <<enumeration>> {
    WELCOME
    INVENTORY
    RECIPEBOOK
    RECIPE
    EXIT
    INVALID
}
}

package commands {

    class "{abstract} \n Command" as Command {
    }

    class BackCommand {
    }

    class EditRecipeCommand {
    }

    class GoToCommand {
    }

    class ListCommandsCommand {
    }

    class CommandResult {
    }

    Command <|-- BackCommand
    Command <|-- EditRecipeCommand
    Command <|-- GoToCommand
    Command <|-- ListCommandsCommand
}

class Recipe {
}

KitchenCTRL --> Ui
KitchenCTRL --> controller.ScreenState
BackCommand ..> Ui
EditRecipeCommand ..> Ui
GoToCommand ..> Ui
ListCommandsCommand ..> Ui

Ui ..> CommandResult
Ui ..> Recipe
Ui ..> controller.ScreenState
@enduml